@@ -112,16 +112,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Random
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|concurrent
 operator|.
 name|Callable
@@ -304,6 +294,26 @@ name|hadoop
 operator|.
 name|hdfs
 operator|.
+name|client
+operator|.
+name|HdfsClientConfigKeys
+operator|.
+name|BlockWrite
+operator|.
+name|ReplaceDatanodeOnFailure
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
 name|server
 operator|.
 name|namenode
@@ -468,7 +478,7 @@ specifier|final
 name|int
 name|DATANODE_NUM
 init|=
-literal|3
+literal|4
 decl_stmt|;
 DECL|field|REPLICATION
 specifier|private
@@ -486,7 +496,7 @@ specifier|final
 name|int
 name|FILE_WORKER_NUM
 init|=
-literal|3
+literal|10
 decl_stmt|;
 DECL|field|TEST_TIME_SECOND
 specifier|private
@@ -495,7 +505,7 @@ specifier|final
 name|long
 name|TEST_TIME_SECOND
 init|=
-literal|10
+literal|20
 decl_stmt|;
 DECL|field|TEST_TIMEOUT_SECOND
 specifier|private
@@ -599,6 +609,17 @@ operator|.
 name|DFS_NAMENODE_REPLICATION_PENDING_TIMEOUT_SEC_KEY
 argument_list|,
 literal|1
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|ReplaceDatanodeOnFailure
+operator|.
+name|BEST_EFFORT_KEY
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 name|cluster
@@ -2981,6 +3002,9 @@ name|void
 name|pause
 parameter_list|()
 block|{
+name|checkErrorState
+argument_list|()
+expr_stmt|;
 name|Preconditions
 operator|.
 name|checkState
@@ -2997,6 +3021,19 @@ name|State
 operator|.
 name|IDLE
 argument_list|)
+argument_list|,
+literal|"%s: state=%s != %s"
+argument_list|,
+name|name
+argument_list|,
+name|state
+operator|.
+name|get
+argument_list|()
+argument_list|,
+name|State
+operator|.
+name|RUNNING
 argument_list|)
 expr_stmt|;
 block|}
